--- a/src/styles/base-styles.css
+++ b/src/styles/base-styles.css
@@ -239,3 +239,216 @@ footer>div>select{
 footer>div>select:hover{
     color: #aeebff;
 }
+
+/* Responsividade para Header */
+@media (max-width: 1024px) {
+    header {
+        grid-template: 12vh / 1fr 2fr;
+        padding: 0 2vh;
+    }
+
+    #logo {
+        width: 50%;
+    }
+
+    .icones {
+        grid-area: 1/2/1/3;
+        gap: 1.5vh;
+        padding-right: 1vh;
+    }
+
+    .user-name {
+        display: none;
+    }
+
+    .user-profile {
+        padding: 5px;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 10vh;
+        grid-template: 10vh / auto 1fr;
+        padding: 0 1.5vh;
+    }
+
+    #logo {
+        width: 40%;
+        height: 80%;
+    }
+
+    .icone {
+        width: 25px;
+        height: 25px;
+    }
+
+    /* Ocultar sino de notificações em telas menores */
+    #sino {
+        display: none;
+    }
+
+    /* Posicionar badge de notificação sobre o menu hamburguer */
+    #menu {
+        position: relative;
+    }
+
+    .icones {
+        gap: 1vh;
+        padding-right: 0.5vh;
+    }
+
+    .user-avatar {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        height: 8vh;
+        grid-template: 8vh / auto 1fr;
+        padding: 0 1vh;
+    }
+
+    #logo {
+        width: 35%;
+        height: 70%;
+    }
+
+    .icone {
+        width: 22px;
+        height: 22px;
+    }
+
+    .icones {
+        gap: 0.8vh;
+    }
+
+    .user-avatar {
+        width: 28px;
+        height: 28px;
+    }
+}
+
+/* Responsividade para Footer */
+@media (max-width: 1024px) {
+    footer {
+        grid-template: auto / 1fr;
+        height: auto;
+        padding: 3vh 2vh;
+        gap: 2vh;
+    }
+
+    footer > div > a {
+        width: 40%;
+    }
+
+    footer > :nth-child(1) {
+        justify-content: flex-start;
+        padding-left: 2vh;
+    }
+
+    footer > :nth-child(2),
+    footer > :nth-child(3) {
+        height: auto;
+        justify-content: flex-start;
+        padding-left: 2vh;
+    }
+
+    footer > :nth-child(2) > div,
+    footer > :nth-child(3) > div {
+        border-left: none;
+        border-top: #F9F9F9 1px solid;
+        padding-left: 0;
+        padding-top: 1vh;
+        height: auto;
+    }
+
+    footer > :nth-child(4) {
+        justify-content: flex-start;
+        padding-left: 2vh;
+        flex-wrap: wrap;
+        gap: 2vh;
+    }
+
+    footer > :nth-child(4) > a {
+        margin-right: 0;
+    }
+
+    footer > :nth-child(5) {
+        justify-content: flex-start;
+        padding-left: 2vh;
+    }
+
+    footer a {
+        font-size: 1.8vh;
+    }
+}
+
+@media (max-width: 768px) {
+    footer {
+        padding: 2.5vh 1.5vh;
+    }
+
+    footer > div > a {
+        width: 35%;
+    }
+
+    footer svg {
+        height: 25px;
+        width: 25px;
+    }
+
+    footer > :nth-child(4) > a {
+        height: 25px;
+        width: 25px;
+    }
+
+    footer a {
+        font-size: 2vh;
+    }
+
+    footer > div > select {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    footer {
+        padding: 2vh 1vh;
+        gap: 1.5vh;
+    }
+
+    footer > div > a {
+        width: 30%;
+    }
+
+    footer svg {
+        height: 22px;
+        width: 22px;
+    }
+
+    footer > :nth-child(4) > a {
+        height: 22px;
+        width: 22px;
+    }
+
+    footer > :nth-child(4) {
+        gap: 1.5vh;
+    }
+
+    footer a {
+        font-size: 1.6vh;
+    }
+
+    footer > div > select {
+        font-size: 13px;
+        height: 18px;
+    }
+
+    footer > :nth-child(5) > img {
+        height: 16px;
+        width: 16px;
+    }
+}
