feat: add loading spinner for project content and hide it upon loading completion

--- a/pages/project/project.css
+++ b/pages/project/project.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 main{
     height: 73vh;
     width: 100%;
