--- a/pages/posts/posts.css
+++ b/pages/posts/posts.css
@@ -891,6 +891,14 @@ footer > div > select:hover {
     overflow: hidden;
 }
 
+.comment-avatar img,
+.comment-avatar .avatar-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .comment-avatar .avatar-letter {
     width: 32px;
     height: 32px;
